--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,7 +30,15 @@ add_executable(test_storage_manager
     test_storage_manager.cpp
 )
 
+add_executable(test_home_manager
+    test_home_manager.cpp
+)
+
 target_include_directories(test_storage_manager PRIVATE
+    ${CMAKE_SOURCE_DIR}/inc
+)
+
+target_include_directories(test_home_manager PRIVATE
     ${CMAKE_SOURCE_DIR}/inc
 )
 
@@ -40,5 +48,12 @@ target_link_libraries(test_storage_manager PRIVATE
     SQLite::SQLite3
 )
 
+target_link_libraries(test_home_manager PRIVATE
+    ${GTEST_LIB_TARGET}
+    home_financials_lib
+    SQLite::SQLite3
+)
+
 include(GoogleTest)
 gtest_discover_tests(test_storage_manager)
+gtest_discover_tests(test_home_manager)
