Implemented a reader class hierarchy to parse canara bank account statements

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,9 @@ set(LIB_SRC
     member.cpp
     storage_manager.cpp
     home_manager.cpp
+    reader.cpp
+    bank_reader.cpp
+    canara_bank_reader.cpp
     ui_manager.cpp
     tui_manager.cpp
     terminal_io.cpp
