--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable(test_new_features
     test_reader_and_bankreader.cpp
     test_storage_banklist_and_save_errors.cpp
     test_homemanager_import_by_id.cpp
+    test_reader_factory_and_homemanager.cpp
 )
 
 target_include_directories(test_storage_manager PRIVATE
