Refactored code to create a BankAccount Class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ set(LIB_SRC
     storage_manager.cpp
     home_manager.cpp
     reader.cpp
+    bank_account.cpp
     bank_reader.cpp
     canara_bank_reader.cpp
     reader_factory.cpp
