--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(test_new_features
     test_commons.cpp
     test_reader.cpp
     test_net_worth_class.cpp
+    test_bank_account.cpp
 )
 
 target_include_directories(test_storage_manager PRIVATE
